chore: add initial crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,25 @@ categories = ["cryptography::cryptocurrencies"]
 
 [workspace]
 members = [
+    "challenger-air",
+    "field-air",
+    "fri-air",
+    "interpolation-air",
+    "merkle-tree-air",
     "recursion",
+    "symmetric-air",
 ]
 
 [workspace.dependencies]
 
 # Local dependencies
+p3-challenger-air = { path = "challenger-air", version = "0.1.0" }
+p3-field-air = { path = "field-air", version = "0.1.0" }
+p3-fri-air = { path = "fri-air", version = "0.1.0" }
+p3-interpolation-air = { path = "interpolation-air", version = "0.1.0" }
+p3-merkle-tree-air = { path = "merkle-tree-air", version = "0.1.0" }
 p3-recursion = { path = "recursion", version = "0.1.0" }
+p3-symmetric-air = { path = "symmetric-air", version = "0.1.0" }
 
 [profile.profiling]
 inherits = "release"
