Add merkle verify gate (#85)
* Add merkle verify gate

* Move merkle air

* Fix circuit building hash size mismatch

* Simplify type parameters

* Minor

* Make merkle configuration dynamic

* Address reviews

* Minor

* Missing file

* Make merkle verify air no std

* Missing changes

* Update circuit-prover/src/air/merkle_verify_air.rs

Co-authored-by: Robin Salen <30937548+Nashtare@users.noreply.github.com>

* Clipy

* Add packing option

* Update ci

* Adress some reviews

* Maldito clippy

* Minor

* Remove compression function dependency for circuits

* Address reviews

* Add test for private data generation

* rename

* Sai's fixes

* fix ci

* Move TODO and add logger to mmcs_verify

* Remove old TODOs

---------

Co-authored-by: Robin Salen <30937548+Nashtare@users.noreply.github.com>
Co-authored-by: Sai Deng <deng.sai@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run examples
         run: |
           cargo run --package p3-circuit-prover --example fibonacci
-          cargo run --package p3-circuit-prover --example fake_merkle_verify
+          cargo run --package p3-circuit-prover --example mmcs_verify
 
   check_embedded:
     name: Build embedded
@@ -91,7 +91,7 @@ jobs:
           # cargo build --verbose --target ${{ env.target }} -p p3-field-air
           # cargo build --verbose --target ${{ env.target }} -p p3-fri-air
           # cargo build --verbose --target ${{ env.target }} -p p3-interpolation-air
-          cargo build --verbose --target ${{ env.target }} -p p3-merkle-tree-air
+          cargo build --verbose --target ${{ env.target }} -p p3-mmcs-air
           cargo build --verbose --target ${{ env.target }} -p p3-symmetric-air
           cargo build --verbose --target ${{ env.target }} -p p3-recursion
 
