--- a/circuit/Cargo.toml
+++ b/circuit/Cargo.toml
@@ -13,12 +13,19 @@ categories.workspace = true
 
 # Plonky3 dependencies
 p3-air.workspace = true
+p3-baby-bear.workspace = true
 p3-field.workspace = true
+p3-goldilocks.workspace = true
+p3-keccak.workspace = true
+p3-koala-bear.workspace = true
 p3-matrix.workspace = true
+p3-symmetric.workspace = true
 p3-uni-stark.workspace = true
+rand.workspace = true
 
 # Other common dependencies
 hashbrown = "0.16.0"
+itertools.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
