--- a/circuit/Cargo.toml
+++ b/circuit/Cargo.toml
@@ -21,6 +21,7 @@ p3-koala-bear.workspace = true
 p3-matrix.workspace = true
 p3-symmetric.workspace = true
 p3-uni-stark.workspace = true
+p3-util.workspace = true
 
 # Other common dependencies
 hashbrown = "0.16.0"
