feat: integrate Poseidon2 (#179)
* copy

* update other files

* Reuse P3 structs

* Refactor columns

* Add compression logic

* temp

* alignment wip

* Add sub builder

* Clippy

* Address comments

* Clippy

* Suggestions for PR #131 (#175)

* perf: remove trace copy

* chore: make eval private

* chore: remove import bloat in test

* chore: simply row filling

* refactor: expose public types

* minor: assert

* feat: make SubBuilder work for BaseAir

* Cargo sort

* feat: add Poseidon2 logic in circuit

* feat: add hash fillers

* feat: integrate Poseidon2Prover into batch stark

* ci: update jobs

* minor

* minor

* minor

* fix

* fix ci

* apply comments

---------

Co-authored-by: hratoanina <hratoanina@polygon.technology>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
       - name: Run examples
         run: |
           cargo run --package p3-circuit-prover --example fibonacci
+          cargo run --package p3-circuit-prover --example hash_chain
+          cargo run --package p3-circuit-prover --example mmcs_verify
       
       - name: Run allocation_log example with debug logging
         env:
@@ -102,6 +104,7 @@ jobs:
           # cargo build --verbose --target ${{ env.target }} -p p3-fri-air
           # cargo build --verbose --target ${{ env.target }} -p p3-interpolation-air
           cargo build --verbose --target ${{ env.target }} -p p3-mmcs-air
+          cargo build --verbose --target ${{ env.target }} -p p3-poseidon2-circuit-air
           cargo build --verbose --target ${{ env.target }} -p p3-symmetric-air
           cargo build --verbose --target ${{ env.target }} -p p3-recursion
 
