--- a/circuit-prover/Cargo.toml
+++ b/circuit-prover/Cargo.toml
@@ -32,6 +32,8 @@ p3-matrix.workspace = true
 p3-maybe-rayon.workspace = true
 p3-merkle-tree.workspace = true
 p3-mmcs-air.workspace = true
+p3-poseidon2-air.workspace = true
+p3-poseidon2-circuit-air.workspace = true
 p3-symmetric.workspace = true
 p3-uni-stark.workspace = true
 rand.workspace = true
