--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "fri-air",
     "interpolation-air",
     "mmcs-air",
+    "poseidon2-circuit-air",
     "recursion",
     "symmetric-air",
 ]
@@ -41,6 +42,8 @@ p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
 p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
 p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
 p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
+p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
+p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
 p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
 p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
 p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "5132bc78" }
@@ -72,6 +75,7 @@ p3-field-air = { path = "field-air", version = "0.1.0" }
 p3-fri-air = { path = "fri-air", version = "0.1.0" }
 p3-interpolation-air = { path = "interpolation-air", version = "0.1.0" }
 p3-mmcs-air = { path = "mmcs-air", version = "0.1.0" }
+p3-poseidon2-circuit-air = { path = "poseidon2-circuit-air", version = "0.1.0" }
 p3-recursion = { path = "recursion", version = "0.1.0" }
 p3-symmetric-air = { path = "symmetric-air", version = "0.1.0" }
 
