clippy: add Plonky3 rules

--- a/circuit-prover/Cargo.toml
+++ b/circuit-prover/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
+[lints]
+workspace = true
+
 # Display math equations properly in documentation
 [package.metadata.docs.rs]
 rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
