--- a/circuit/Cargo.toml
+++ b/circuit/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 
 # Plonky3 dependencies
