--- a/mmcs-air/Cargo.toml
+++ b/mmcs-air/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 itertools.workspace = true
 p3-air.workspace = true
