--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,6 @@ transmute_undefined_repr = "allow"
 cognitive_complexity = "allow"
 
 [workspace.dependencies]
-
 # Plonky3 dependencies - shared across all crates
 p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "eb871f9" }
 p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "eb871f9" }
@@ -80,6 +79,8 @@ serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
+strum = { version = "0.27.2", default-features = false }
+strum_macros = "0.27.2"
 thiserror = { version = "2.0", default-features = false }
 tracing = { version = "0.1.37", default-features = false, features = [
     "attributes",
