Integrate lookups to recursive verifier (#225)
* Update prover and nonrecursive verifier

* WIP

* Make things compile

* Add missing check in circuit verifier

* Some fixes

* Fix remaining issues

* Fix clippy and formatting

* Change target branch

* Small cleanup

* Fix for ZK-related changes

* Add cfg(debug_assertions) for DebugConstraintFolderWithLookups

* Update Plonky3 version

* Apply comments

* Add tests and add check

* Apply comments

* Apply comments and update tests

--- a/recursion/Cargo.toml
+++ b/recursion/Cargo.toml
@@ -18,12 +18,14 @@ p3-circuit-prover.workspace = true
 p3-commit.workspace = true
 p3-field.workspace = true
 p3-fri.workspace = true
+p3-lookup.workspace = true
 p3-merkle-tree.workspace = true
 p3-symmetric.workspace = true
 p3-uni-stark.workspace = true
 p3-util.workspace = true
 
 # Other dependencies
+hashbrown.workspace = true
 itertools.workspace = true
 serde.workspace = true
 thiserror.workspace = true
