--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,29 +47,30 @@ cognitive_complexity = "allow"
 
 [workspace.dependencies]
 # Plonky3 dependencies - shared across all crates
-p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-circle = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
-p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "cdfc24af" }
+p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-circle = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
+p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "cfba46c" }
 
 # Other common dependencies
+hashbrown = "0.16.0"
 itertools = { version = "0.14.0", default-features = false, features = [
     "use_alloc",
 ] }
