profiling: add circuit building profiling (#272)
* feat: add circuit profiling feature

* feat: better log NPO profiles

* ci: update clippy job with features

* profiling: some more low level tracing

* ci: update labeler with profiling

* chore: cargo sort

* chore: fix test condition

* ci: add all-features testing

* chore: more tweak

* chore: indentation

* refactor: make debug allocation use String

* profiling: add more scopes to FRI

--- a/circuit/Cargo.toml
+++ b/circuit/Cargo.toml
@@ -51,6 +51,10 @@ rand.workspace = true
 tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
 tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
 
+[features]
+debugging = []
+profiling = ["debugging"]
+
 [[bench]]
 name = "runner_traces"
 harness = false
